--- a/T1_ML.ipynb
+++ b/T1_ML.ipynb
@@ -163,11 +163,23 @@
     "\n",
     "Pontos fortes:\n",
     "\n",
+    "    1. A implementação apresentada utiliza bibliotecas do scikit-learn.\n",
+    "\n",
     "Potenciais problemas:\n",
+    "\n",
+    "    1. A escolha do valor correto de k pode ser um desafio, pois um valor muito baixo pode resultar em um modelo sensível a ruído e outliers, enquanto um valor muito alto pode resultar em um modelo subajustado.\n",
+    "\n",
+    "    2. O desempenho do KNN depende da escolha apropriada dos hiperparâmetros, como o número de vizinhos considerados, a medida de distância usada e o tipo de peso aplicado.\n",
     "\n",
     "Melhorias:\n",
     "\n",
-    "Observações gerais:\n"
+    "    1. Normalizar os dados pode ajudar a melhorar o desempenho do modelo, especialmente se as características dos dados tiverem escalas diferentes.\n",
+    "\n",
+    "    2. Pode ser útil realizar a seleção de características para eliminar características irrelevantes ou redundantes. Isso pode ajudar a melhorar o desempenho do modelo e reduzir o tempo de processamento.\n",
+    "\n",
+    "Observações gerais:\n",
+    "\n",
+    "    1.\n"
    ]
   },
   {
@@ -339,7 +351,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arvore de decisão\n",
+    "## Relatório Naive Bayes:\n",
+    "\n",
+    "Pontos fortes:\n",
+    "\n",
+    "    1. \n",
+    "\n",
+    "\n",
+    "\n",
+    "Potenciais problemas:\n",
+    "\n",
+    "Melhorias:\n",
+    "\n",
+    "Observações gerais:\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - Árvore de decisão\n",
     "\n",
     "## ChatGPT prompt: \"code a decision tree implementation in python ready to test and train for the \"titanic\" dataset\"\n",
     "\n",
@@ -498,19 +530,28 @@
     "\n",
     "    2. Podermos de maneira fácil analisar várias outras métrica de avalição como como a matriz de confusão, pontuação F1, precisão, recall e curva ROC que nos permitem ter uma visão mais ampla e detalhada dos resultados do modelo.\n",
     "\n",
-    "    3. O código está fácil de ser utilizado e fácil de ser lido, são poucas linhasd de código \n",
+    "    3. O código está fácil de ser utilizado e fácil de ser lido, são poucas linhas de código \n",
     "\n",
     "Potenciais problemas:\n",
     "\n",
     "    1. Overfitting pode ser um dos problemas, mesmo com o max_depth ainda pode acontecer que o modelo se ajuste muito aos dados de treinamento podendo acalhar em um desempenho pior em novos dados.\n",
     "\n",
-    "    2. Seleção de recursos insuficient, está sendo utilizado apenas um conjunto limitado de recursos para treinar o modelo. Podem haver outros recursos que são importantes para a previsão da sobrevivência, mas que não foram incluídos na análise.\n",
+    "    2. Seleção de recursos insuficiente, está sendo utilizado apenas um conjunto limitado de recursos para treinar o modelo. Podem haver outros recursos que são importantes para a previsão da sobrevivência, mas que não foram incluídos na análise.\n",
     "\n",
     "    3. Limitações da árvore de decisão, o modelo é simples e interpretável, mas pode não ser capaz de capturar relações mais complexas entre os recursos e a variável de destino.\n",
     "\n",
     "Melhorias: \n",
     "\n",
-    "Observações gerais:"
+    "    1. A implementação do ChatGPT utiliza um conjunto limitado de recursos para o treino. Engenharia de recursos poderia ser utilizada para extrair informações adicionais dos dados.\n",
+    "\n",
+    "    2. Adicionar técnicas de regularização como L1, L2 ou dropout podem ajudar a prevenir overfitting.\n",
+    "\n",
+    "    3. A implementação usa apenas a variável max_depth para controle de complexidade. Utilizar a técnica de busca em grid pode levar a um modelo mais otimizado e de melhor desempenho.\n",
+    "\n",
+    "    4. Esta implementação oferece uma análise básica dos dados. Uma análise mais profunda poderia fornecer insights adicionais sobre a relação entre os recursos, podendo realizar uma modelagem mais precisa e refinada.\n",
+    "\n",
+    "\n",
+    "Observações gerais:\n"
    ]
   }
  ],
@@ -530,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
