--- a/T1_ML.ipynb
+++ b/T1_ML.ipynb
@@ -175,11 +175,7 @@
     "\n",
     "    1. Normalizar os dados pode ajudar a melhorar o desempenho do modelo, especialmente se as características dos dados tiverem escalas diferentes.\n",
     "\n",
-    "    2. Pode ser útil realizar a seleção de características para eliminar características irrelevantes ou redundantes. Isso pode ajudar a melhorar o desempenho do modelo e reduzir o tempo de processamento.\n",
-    "\n",
-    "Observações gerais:\n",
-    "\n",
-    "    1.\n"
+    "    2. Pode ser útil realizar a seleção de características para eliminar características irrelevantes ou redundantes. Isso pode ajudar a melhorar o desempenho do modelo e reduzir o tempo de processamento.\n"
    ]
   },
   {
@@ -355,15 +351,32 @@
     "\n",
     "Pontos fortes:\n",
     "\n",
-    "    1. \n",
+    "    1. O desempenho do modelo é razoavelmente bom, com uma acurácia de cerca de 80%. Além disso, o modelo não está superajustando (overfitting) os dados, o que pode ser pelos resultados no conjunto de teste e validação cruzada.\n",
     "\n",
-    "\n",
+    "    2. Facilidade de ajuste, o código está feito de maneira que é possível fazer ajustes simples na implementação do modelo para testar outras variações de Naive Bayes, como Multinomial e Bernoulli, e verificar se eles se adaptam melhor ao conjunto de dados.\n",
     "\n",
     "Potenciais problemas:\n",
     "\n",
+    "    1. Viés da amostra, se a distribuição de dados no conjunto de treinamento não for representativa do conjunto de teste ou do mundo real, o modelo pode não generalizar bem para novos dados e gerar uma performance pior.\n",
+    "\n",
+    "    2. Validação cruzada, a implementação não usa validação cruzada, o que pode levar a uma avaliação otimista do desempenho do modelo. \n",
+    "\n",
+    "    3. Hiperparâmetros, a implementação usa os hiperparâmetros padrão do modelo Naive Bayes, que podem não ser os melhores para este conjunto de dados.\n",
+    "\n",
+    "    4. Outliers, a implementação não trata possíveis outliers nos dados. É importante investigar e tratar possíveis outliers antes de aplicar o modelo.\n",
+    "\n",
+    "\n",
     "Melhorias:\n",
     "\n",
-    "Observações gerais:\n"
+    "    1. Pré-processamento mais sofisticado, a implementação trata dados ausentes simplesmente substituindo-os pela média. Uma técnica que poderia ter sido utlizada é a imputação de dados ausentes com métodos de aprendizado de máquina, que podem melhorar a performance do modelo.\n",
+    "\n",
+    "    2. Seleção de características, poderia ser benéfico realizar seleção de características ao invés de usar todas, para remover as que podem ser redundantes ou irrelevantes, melhorando a eficiência e a performance do modelo.\n",
+    "\n",
+    "    3. Ajuste dos hiperparâmetros como colocado acima e também o tratamento de outliers.\n",
+    "\n",
+    "Observações gerais:\n",
+    "\n",
+    "    Para a implementação do Naive Bayes foi necessário pedir uma segunda implementação utilizando o mesmo prompt no chat, pois a primeira estava com erros.\n"
    ]
   },
   {
@@ -528,15 +541,15 @@
     "    \n",
     "    1. A escolha do parâmetro 3 para o valor 3 ajuda a evitar que o modelo se ajuste muito aos dados e treinamento e assim melhoramos seu desempenho generalizado\n",
     "\n",
-    "    2. Podermos de maneira fácil analisar várias outras métrica de avalição como como a matriz de confusão, pontuação F1, precisão, recall e curva ROC que nos permitem ter uma visão mais ampla e detalhada dos resultados do modelo.\n",
+    "    2. Podermos de maneira fácil analisar várias outras métricas de avalição como a matriz de confusão, pontuação F1, precisão, recall e curva ROC que nos permitem ter uma visão mais ampla e detalhada dos resultados do modelo.\n",
     "\n",
     "    3. O código está fácil de ser utilizado e fácil de ser lido, são poucas linhas de código \n",
     "\n",
     "Potenciais problemas:\n",
     "\n",
-    "    1. Overfitting pode ser um dos problemas, mesmo com o max_depth ainda pode acontecer que o modelo se ajuste muito aos dados de treinamento podendo acalhar em um desempenho pior em novos dados.\n",
+    "    1. Overfitting pode ser um dos problemas, mesmo com o max_depth ainda pode acontecer que o modelo se ajuste muito aos dados de treinamento, podendo acalhar em um desempenho pior em novos dados.\n",
     "\n",
-    "    2. Seleção de recursos insuficiente, está sendo utilizado apenas um conjunto limitado de recursos para treinar o modelo. Podem haver outros recursos que são importantes para a previsão da sobrevivência, mas que não foram incluídos na análise.\n",
+    "    2. Seleção de recursos insuficiente, está sendo utilizado apenas um conjunto limitado de recursos para treinar o modelo. Podem haver outros recursos importantes para a previsão da sobrevivência, mas que não foram incluídos na análise.\n",
     "\n",
     "    3. Limitações da árvore de decisão, o modelo é simples e interpretável, mas pode não ser capaz de capturar relações mais complexas entre os recursos e a variável de destino.\n",
     "\n",
@@ -548,10 +561,7 @@
     "\n",
     "    3. A implementação usa apenas a variável max_depth para controle de complexidade. Utilizar a técnica de busca em grid pode levar a um modelo mais otimizado e de melhor desempenho.\n",
     "\n",
-    "    4. Esta implementação oferece uma análise básica dos dados. Uma análise mais profunda poderia fornecer insights adicionais sobre a relação entre os recursos, podendo realizar uma modelagem mais precisa e refinada.\n",
-    "\n",
-    "\n",
-    "Observações gerais:\n"
+    "    4. Esta implementação oferece uma análise básica dos dados. Uma análise mais profunda poderia fornecer insights adicionais sobre a relação entre os recursos, podendo realizar uma modelagem mais precisa e refinada.\n"
    ]
   }
  ],
